Tuned up navigation for desktop and mobile.
It all feels right now. added a bunch of content, working on commands and also added in new terminal component - still needs work.

--- a/layouts/partials/colors.html
+++ b/layouts/partials/colors.html
@@ -34,9 +34,9 @@
         --rule-stats-background: #0a0a0a;
         --rule-item-border: rgba(35, 43, 58, 0.9);
         --navigation-hover: #b685ff33;
-        --navigation-child-selected: rgba(182, 133, 255, 0.26);
+        --navigation-child-selected: rgba(182, 133, 255, 0.36);
         --navigation-child-hover: rgba(179, 131, 250, 0.09);
-        --navigation-child-container: rgba(182, 133, 255, 0.10);
+        --navigation-child-container: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(182,133,255,0.2) 50%);
         --page-width: 65em;
         --font-color: #e8e9ed;
         --invert-font-color: #222225;
@@ -46,6 +46,8 @@
         --secondary-color-shadow: rgb(59, 41, 87);
         --secondary-color-shadow-mid: rgb(78, 54, 114);
         --tertiary-color: #a3abba;
+        --terminal-border: rgba(163, 171, 186, 0.5);
+        --terminal-header-background: linear-gradient(90deg, rgba(163, 171, 186, 0.5) 0%, rgba(163, 171, 186, 0.26) 80%);
         --primary-color: rgba(98, 196, 255, 1.0);
         --primary-color-lowalpha: rgba(98, 196, 255, 0.6);
         --error-color: #ff3c74;
