Tuning mobile experience after exploring on my phone.
A few things are a little quirky, this should clean things up.

Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/layouts/partials/colors.html
+++ b/layouts/partials/colors.html
@@ -7,6 +7,7 @@
         --nav-font-size: 0.95rem;
         --toc-font-header-size: 0.85rem;
         --rule-item-header-fontsize: 1.2rem;
+        --rule-item-header-fontsize-mobile: 1rem;
         --rule-item-details-fontsize: 0.8rem;
         --rule-format-fontsize: 0.8rem;
         --rule-type-fontsize: 0.7rem;
@@ -17,6 +18,8 @@
         --rule-recommended-banner-fontsize: 1rem;
         --rule-panel-label: 0.7rem;
         --rule-id-fontsize: 2rem;
+        --rule-id-fontsize-mobile: 1.3rem;
+
         --global-line-height: 1.4em;
         --global-space: 10px;
         --vacuum-navigation-width-v: 199px;
@@ -29,6 +32,8 @@
             serif;
         --background-color: #0d1117;
         --background-color-alpha: rgba(13, 17, 23, 0.80);
+        --background-color-alpha-mobile: rgba(13, 17, 23, 0.99);
+
         --rule-item-background: rgba(26, 32, 44, 0.51);
         --rule-recommended-background: rgb(33, 41, 55);
         --rule-stats-background: #0a0a0a;
