--- a/layouts/partials/colors.html
+++ b/layouts/partials/colors.html
@@ -63,7 +63,7 @@
         --code-bg-color: none;
         --input-style: solid;
         --display-h1-decoration: none;
-        --bold-text: #e397fa;
+        --bold-text: #b685ff;
         --terminal-green: #00FF00FF;
         --terminal-yellow: #fddb00;
         --hrcolor: #3d3d3d;
