--- a/static/assets/vacuum.css
+++ b/static/assets/vacuum.css
@@ -38,6 +38,14 @@ h4 {
     border-bottom: 1px dashed var(--secondary-color-lowalpha);
 }
 
+.quick-start-divider {
+    padding-top: 0;
+    margin-top: 0;
+    margin-bottom: 10px;
+    border-bottom: 1px dashed var(--secondary-color);
+}
+
+
 .github-link {
     display: inline-block;
     margin-top: 20px;
@@ -395,6 +403,19 @@ li.mobile-nav::after {
 .rule-category-description, .function-description {
     font-size: var(--rule-item-details-fontsize);
     color: var(--tertiary-color);
+}
+
+nav div.fixed-position a.quick-start-navigation {
+    margin-left: 0;
+    padding-left: 5px;
+    margin-bottom: 10px;
+    display: inline-block;
+    font-weight: bold;
+}
+
+nav div.fixed-position a.quick-start-navigation::after {
+    content: " 🚀";
+    font-family: Arial, Verdana, Gill Sans sans-serif
 }
 
 
