Cleaning up a few things after another quality check.
another sweep turned up a few things to solve.

--- a/layouts/partials/vacuum/navigation.html
+++ b/layouts/partials/vacuum/navigation.html
@@ -46,7 +46,12 @@
     {{ $currentPage := . }}
     {{ range .Site.Menus.vacuum }}
       <li class="mobile-nav {{ if $currentPage.IsMenuCurrent "vacuum" . }}active-section{{ end }}">
+
+      {{ if .HasChildren }}
+      {{ .Name }}
+      {{ else }}
       <a href="{{ .URL }}">{{ .Name }}</a>
+      {{ end }}
     {{ if .HasChildren }}
       <ul>
     {{ range .Children }}
