Another sweep, added homepage!
cleaned up a lot, looking and feeling nice now, happy with v1.

Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/layouts/partials/vacuum/navigation.html
+++ b/layouts/partials/vacuum/navigation.html
@@ -1,6 +1,6 @@
 <nav class="vacuum-navigation">
   <div class="fixed-position">
-    <a href="/vacuum/start" class="quick-start-navigation">Quick Start Guide</a>
+    <a href="/vacuum/start" class="quick-start-navigation">Quick Start Guide&nbsp;</a>
     <hr class="quick-start-divider" />
   <vacuum-desktop-navigation>
         {{- $currentPage := . -}}
