--- a/layouts/vacuum/homepage.html
+++ b/layouts/vacuum/homepage.html
@@ -1,8 +1,8 @@
 {{ define "mainblock" }}
 <div class="main-container">
-    <main class="content-container">
+    <main class="content-container home">
         {{ partial "vacuum/navigation" . }}
-        <section class="vacuum-content">
+        <section class="vacuum-content home">
             <article class="framed-content">
                 <img src="/images/vacuum/logo.png" alt="vacuum logo" title="logo">
                 <span class="homepage-strapline">
