--- a/layouts/partials/colors.html
+++ b/layouts/partials/colors.html
@@ -39,6 +39,7 @@
         --navigation-child-selected: rgba(182, 133, 255, 0.36);
         --navigation-child-hover: rgba(179, 131, 250, 0.09);
         --navigation-child-container: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(182,133,255,0.2) 50%);
+        --vacuum-online-results-background: linear-gradient(180deg, rgba(13, 17, 23,1) 0%, rgba(223, 222, 225, 0.12) 50%);
         --page-width: 65em;
         --font-color: #e8e9ed;
         --invert-font-color: #222225;
@@ -55,7 +56,7 @@
         --error-color: #ff3c74;
         --error-font-color: #ff246b;
         --error-color-lowalpha: rgba(255, 60, 116, 0.4);
-        --progress-bar-background: #3f3f44;
+        --progress-bar-background: #0a0a0a;
         --progress-bar-fill: #62c4ff;
         --code-bg-color: none;
         --input-style: solid;
@@ -66,5 +67,21 @@
         --hrcolor: #3d3d3d;
         --code-border: #525252;
         --string-literal: #fd66e5;
+        --warn-400: #ff6a00;
+        --warn-400-lowalpha: rgba(255, 106, 0, 0.15);
+        --warn-300: #ff9900;
+        --warn-300-lowalpha: rgba(255, 153, 0, 0.05);
+        --warn-200: #ffb700;
+        --warn-200-lowalpha: rgba(255, 183, 0, 0.15);
+        --warn-color: #ffd500;
+        --warn-color-lowalpha: rgba(255, 213, 0, 0.15);
+        --ok-400: #f7ff00;
+        --ok-400-lowalpha: rgba(230, 255, 0, 0.15);
+        --ok-300: #d0ff00;
+        --ok-300-lowalpha: rgba(208, 255, 0, 0.15);
+        --ok-200: #aaff00;
+        --ok-200-lowalpha: rgba(170, 255, 0, 0.15);
+        --ok-color: #1aff00;
+        --ok-color-lowalpha: rgba(170, 255, 0, 0.15);
     }
 </style>
